[tool.poetry]
name = "pdf-site"
version = "0.1.0"
description = "Script to covert a website and all pages therein to PDF"
authors = ["TonyGrif <TonyGriffin2000@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.2"
pytest-cov = "^5.0.0"
tox = "^4.15.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.1.0"
ruff = "^0.4.2"
flake8-pyproject = "^1.2.3"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E701"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
